# src/api/helper/base_response.go
@@ -5,33 +5,39 @@ import "github.com/MrRezoo/CarApp/api/validations"
 type BaseHttpResponse struct {
 	Result           any                            `json:"result"`
 	Success          bool                           `json:"success"`
-	Code             int                            `json:"code"`
-	ValidationErrors *[]validations.ValidationError `json:"validation_errors"`
+	ResultCode       ResultCode                     `json:"resultCode"`
+	ValidationErrors *[]validations.ValidationError `json:"validationErrors"`
 	Error            any                            `json:"error"`
 }
 
-func GenerateBaseResponse(result any, success bool, code int) *BaseHttpResponse {
-	return &BaseHttpResponse{
-		Result:  result,
-		Success: success,
-		Code:    code,
+func GenerateBaseResponse(result any, success bool, resultCode ResultCode) *BaseHttpResponse {
+	return &BaseHttpResponse{Result: result,
+		Success:    success,
+		ResultCode: resultCode,
 	}
 }
 
-func GenerateBaseResponseWithError(result any, success bool, code int, err error) *BaseHttpResponse {
-	return &BaseHttpResponse{
-		Result:  result,
-		Success: success,
-		Code:    code,
-		Error:   err,
+func GenerateBaseResponseWithError(result any, success bool, resultCode ResultCode, err error) *BaseHttpResponse {
+	return &BaseHttpResponse{Result: result,
+		Success:    success,
+		ResultCode: resultCode,
+		Error:      err.Error(),
+	}
+
+}
+
+func GenerateBaseResponseWithAnyError(result any, success bool, resultCode ResultCode, err any) *BaseHttpResponse {
+	return &BaseHttpResponse{Result: result,
+		Success:    success,
+		ResultCode: resultCode,
+		Error:      err,
 	}
 }
 
-func GenerateBaseResponseWithValidationError(result any, success bool, code int, err error) *BaseHttpResponse {
-	return &BaseHttpResponse{
-		Result:           result,
+func GenerateBaseResponseWithValidationError(result any, success bool, resultCode ResultCode, err error) *BaseHttpResponse {
+	return &BaseHttpResponse{Result: result,
 		Success:          success,
-		Code:             code,
+		ResultCode:       resultCode,
 		ValidationErrors: validations.GetValidationErrors(err),
 	}
 }
