# src/docs/swagger.json
@@ -310,21 +310,46 @@
         "helper.BaseHttpResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
-                },
                 "error": {},
                 "result": {},
+                "resultCode": {
+                    "$ref": "#/definitions/helper.ResultCode"
+                },
                 "success": {
                     "type": "boolean"
                 },
-                "validation_errors": {
+                "validationErrors": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/validations.ValidationError"
                     }
                 }
             }
+        },
+        "helper.ResultCode": {
+            "type": "integer",
+            "enum": [
+                0,
+                40001,
+                40101,
+                40301,
+                40401,
+                42901,
+                42902,
+                50001,
+                50002
+            ],
+            "x-enum-varnames": [
+                "Success",
+                "ValidationError",
+                "AuthError",
+                "ForbiddenError",
+                "NotFoundError",
+                "LimiterError",
+                "OtpLimiterError",
+                "CustomRecovery",
+                "InternalError"
+            ]
         },
         "validations.ValidationError": {
             "type": "object",
